fixed scroll overflow

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -147,7 +147,7 @@
 /* left side */
 .leftSide{
   /* border: 2px solid var(--primary-light-color); */
-  overflow: auto;
+  overflow: hidden;
 }
 
 .leftSide__inner{
@@ -220,14 +220,14 @@
   background-color: var(--secondary-dark-color-fade);
   border-radius: 5px;
   grid-template-columns: 1fr;
-  grid-auto-rows: 20%;
+  grid-auto-rows: 18%;
   gap: 2%;
   min-height: min-content;
   max-height: max-content;
   overflow-y: auto;
   padding-top: 2%;
-  padding-bottom: 2%;
-  margin-top: 4%;
+  padding-bottom: 0%;
+  margin-top: 2%;
 }
 
 .leftSide__menu::-webkit-scrollbar {
